2010-02-05  Andreas Kupries  <andreask@activestate.com>

	* checker.tcl: Gave the checking layer access to dt_file,
	* doctools.tcl: and extended it to provide the file name
	* doctools.man: as part of the location information in
	* doctools.test: errors and warnings. Bumped version to
	* pkgIndex.tcl: 1.4.6.

2010-02-04  Andreas Kupries  <andreask@activestate.com>

	* doctools.tcl: Extended with new plugin API command
	* doctools.man: [dt_mainfile], which always returns 
	* doctools_plugin_apiref.man: the toplevel file currently
	* pkgIndex.tcl: processed, in contrast to [dt_file] which
	  returns the currently processed file, which may be included.
	  Bumped version to 1.4.5.

	* mpformats/fmt.html: Fixed bug in inter-document link generation
	  caused by computing links relative to the active (include) file,
	  instead of the toplevel.

2009-12-09  Andreas Kupries  <andreask@activestate.com>

	* doctools.tcl: Bumped version to 1.4.4.
	* doctools.man: 
	* pkgIndex.tcl:

	* mpformats/fmt.html: Extended to support the engine variable
	* doctools.test: 'raw' (boolean flag). The default is off, causing
	  the engine to generate the full html, as usual. If set, the
	  engine will generate only the HTML normally between the <body>
	  and </body> tags, excluding these two tags. This allows for
	  easier embedding of the result in other HTML. Thanks to Jos
	  DeCoster for the idea. Extended the testsuite to cover raw mode
	  results.

	* mpformats/fmt.wiki: Thanks to Jos DeCoster for updating the Wiki
	* tests/wiki/00: formatter to generate text making better use of
	* tests/wiki/01: Wikit's new features, and also fixing bugs in the
	* tests/wiki/02: use of the older features. Updated test results.
	* tests/wiki/03:
	* tests/wiki/04:
	* tests/wiki/05:
	* tests/wiki/06:
	* tests/wiki/07:
	* tests/wiki/08:

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 
